[package]
name = "rust"
version = "1.7.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
mysql_async = "0.34.1"  # Check for the latest version suitable for your needs
rusqlite = { version = "0.31.0", features = ["bundled"] }
config = "0.14"
chrono = { version = "0.4.38", features = ["serde"] }

[dependencies.openssl]
version = "0.10"
features = ["vendored"]